force-app/main/default/objects/Commission__c/fields/DataIndex__c.field-meta.xml
<CustomField>
    <fullName>DataIndex__c</fullName>
    <formula>CASESAFEID(OwnerId ) + &apos;_&apos; + TEXT(Year__c) + &apos;_&apos; +  TEXT(Month__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Index</label>
    <type>Text</type>
</CustomField>