force-app/main/default/objects/Commission__c/fields/FinalAmount__c.field-meta.xml
<CustomField>
    <fullName>FinalAmount__c</fullName>
    <label>Final Amount</label>
    <summarizedField>CommissionDetail__c.FinalAmount__c</summarizedField>
    <summaryForeignKey>CommissionDetail__c.Commission__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>